--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-native": "0.56.0",
     "react-native-collapsible": "^0.13.0",
     "react-native-navigation": "^1.1.483",
-    "react-native-vector-icons": "^5.0.0"
+    "react-native-vector-icons": "^5.0.0",
+    "tcomb-form-native": "^0.6.15"
   },
   "devDependencies": {
     "babel-jest": "23.4.2",
